2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* rsvg-cairo-render.h: Feature request: rsvg_handle_get_dimensions_sub()
	(#555682). Patches from Hagen Schink (troja84@gmail.com) and 
	Robert Staudinger (robert.staudinger@gmail.com)
	* librsvg.def: 
	* rsvg-private.h:
	* ChangeLog:
	* rsvg-structure.c:
	* rsvg-base.c:
	* rsvg-css.c:
	* rsvg.h:
	* rsvg-dimensions.c:
	* Makefile.am:
	* rsvg-cairo-render.c:
	* rsvg-gobject.c: ditto
	
2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>
	
	* gdk-pixbuf-loader/Makefile.am: -I flag-ordering problem breaks build
	if system already has lib installed (#558040). Patch from 
	dmacks@netspace.org
	* Makefile.am: ditto

2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* Makefile.am: Stray Makefile variables (#558039). Patches from
	dmacks@netspace.org
	* rsvg-base.c:
	* gdk-pixbuf-loader/Makefile.am:
	* gtk-engine/Makefile.am: ditto
	
2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* gtk-engine/svg-rc-style.c: Remove deprecated GLib symbols (#560444).
	Patch by Luis Menina (liberforce@freeside.fr)
	
2008-11-05  Kjartan Maraas  <kmaraas@gnome.org>

	* rsvg-private.h: Use G_STRFUNC as suggested by Christian Persch.

2008-11-05  Kjartan Maraas  <kmaraas@gnome.org>

	* rsvg-private.h: Don't use deprecated glib symbols.

2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-structure.c: Stop crash due to recursive references (#518640).
	Patch by Tom Parker
	* rsvg-private.h: ditto
	* rsvg-base.c: ditto
	* rsvg-cairo-render.c: ditto
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-mask.c: another memory leak (#552919). Found by mclasen.
	
2008-10-20  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-gobject.c: gdmgreeter segfault due to libxml2 API/ABI change
	(#549087). Patch by Tom Parker (palfrey%40tevp.net). Untested against
	libxml2 >= 2.7.0, but DV says "from the distance, that patch seems 
	to do the right thing"
	* rsvg-base.c: ditto
