@@ -24,6 +24,8 @@ rsvg_handle_set_base_uri
 rsvg_handle_get_title
 rsvg_handle_get_desc
 rsvg_handle_get_dimensions
+rsvg_handle_get_dimensions_sub
+rsvg_handle_get_position_sub
 </SECTION>
 
 <SECTION>
