@@ -1,3 +1,12 @@
+2008-11-27  Robert Staudinger  <robsta@gnome.org>
+
+	* doc/rsvg-sections.txt: New API rsvg_handle_get_position_sub(), gets
+	the offset of an SVG element.
+	* librsvg.def:
+	* rsvg-base.c (rsvg_handle_get_position_sub):
+	* rsvg-dimensions.c (main):
+	* rsvg.h: ditto.
+
 2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>
 
 	* rsvg-cairo-render.h: Feature request: rsvg_handle_get_dimensions_sub()
